commit made by wmiointadmin

--- a/config/scaffolding/Test5Project.yml
+++ b/config/scaffolding/Test5Project.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/y509522/Test5Project
   gitUsername: y509522
   gitBranch: main
+services:
+- serviceName: project.test5.integrations:Test
+  packages:
+  - name: Test5Project
+    version: "1.0"
+- serviceName: pub.date:getCurrentDate
+  packages:
+  - name: WmPublic
+    version: 11.0.0.0.903
